deploy: 7661148928d9a3ac4d8004b76004e90c1748a5fc

--- a/notes/2024.html
+++ b/notes/2024.html
@@ -105,14 +105,14 @@
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E5%9F%BA%E9%87%912024.pdf-1.jpg" /></p></td>
-<td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E5%9F%BA%E9%87%912024-se.pdf-1.jpg" /></p></td>
+<tr class="row-even"><td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E6%AD%A3%E6%96%872024.pdf-1.jpg" /></p></td>
+<td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E6%AD%A3%E6%96%872024-se.pdf-1.jpg" /></p></td>
 </tr>
-<tr class="row-odd"><td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E5%9F%BA%E9%87%912024.pdf-2.jpg" /></p></td>
-<td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E5%9F%BA%E9%87%912024-se.pdf-2.jpg" /></p></td>
+<tr class="row-odd"><td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E6%AD%A3%E6%96%872024.pdf-2.jpg" /></p></td>
+<td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E6%AD%A3%E6%96%872024-se.pdf-2.jpg" /></p></td>
 </tr>
-<tr class="row-even"><td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E5%9F%BA%E9%87%912024.pdf-3.jpg" /></p></td>
-<td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E5%9F%BA%E9%87%912024-se.pdf-3.jpg" /></p></td>
+<tr class="row-even"><td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E6%AD%A3%E6%96%872024.pdf-3.jpg" /></p></td>
+<td class="text-center"><p><img alt="" src="gh-pages/galleries/%E9%9D%92%E5%B9%B4%E6%AD%A3%E6%96%872024-se.pdf-3.jpg" /></p></td>
 </tr>
 </tbody>
 </table>
